--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         <script src="resources/horsey.min.js"></script>
         <script src="resources/ol3-search-layer.js"></script>
         <script src="./resources/ol-layerswitcher.js"></script>
-        <script src="layers/RollsStep1_1.js"></script><script src="layers/Rollsstep2_2.js"></script><script src="layers/POIs_3.js"></script><script src="layers/ATMSOUTDOOR_4.js"></script><script src="layers/ATMSINDOOR_5.js"></script>
-        <script src="styles/RollsStep1_1_style.js"></script><script src="styles/Rollsstep2_2_style.js"></script><script src="styles/POIs_3_style.js"></script><script src="styles/ATMSOUTDOOR_4_style.js"></script><script src="styles/ATMSINDOOR_5_style.js"></script>
+        <script src="layers/POIs_1.js"></script><script src="layers/ROLLSStep1_2.js"></script><script src="layers/RollsStep2_3.js"></script><script src="layers/ATMsOutdoor_4.js"></script><script src="layers/ATMSIndoor_5.js"></script>
+        <script src="styles/POIs_1_style.js"></script><script src="styles/ROLLSStep1_2_style.js"></script><script src="styles/RollsStep2_3_style.js"></script><script src="styles/ATMsOutdoor_4_style.js"></script><script src="styles/ATMSIndoor_5_style.js"></script>
         <script src="./layers/layers.js" type="text/javascript"></script> 
         <script src="./resources/Autolinker.min.js"></script>
         <script src="./resources/qgis2web.js"></script>
